--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "array.prototype.findindex": "^1.0.0",
     "node-uuid": "^1.4.3",
     "react": "^0.14.0"
   }
