--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban",
+  "name": "react-kittens",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,7 @@
   "dependencies": {
     "array.prototype.findindex": "^1.0.0",
     "node-uuid": "^1.4.3",
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
